Haciendo prueba de colores

--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,10 @@ body{
 }
 .carousel-inner, .btn-default {
   background-color: #A41C37;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 .fa-shopping-cart  {
-  color: white;
+  color: #FFFFFF;
 
 }
