--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,72 @@ body{
   color: #FFFFFF;
 
 }
+
+/* Estilos para página principal */
+
+.img0{
+  background-size: cover;
+  height: 500px;
+}
+
+.thumbnail {
+    position:relative;
+    overflow:hidden;
+}
+
+.caption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(0,0,0, 0.9);
+    width:100%;
+    height:100%;
+    padding:10%;
+    display: none;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
+    overflow: hidden;
+}
+
+.carousel-inner>.item {
+  width: 100%;
+  height: 400px;
+}
+
+.carousel-inner>.item> img {
+  width: 100%;
+}
+
+.thumbnail .caption {
+    padding: 10%;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+ .btn-primary {
+  background-color: #000000;
+  border-color: #FFFFFF;
+}
+.carousel-inner, .btn-default {
+  background-color: #A41C37;
+  color: #FFFFFF;
+}
+
+.fa-shopping-cart  {
+  color: #FFFFFF;
+}
+
+/* Formato imagen carrusel */
+h3 {
+  font-size: 30px;
+  color: white;
+  padding: 1%;
+  padding-bottom: 2%;
+  margin: 0;
+  margin: 0;
+  text-align: center;
+  background: linear-gradient(to bottom, black, white);
+}
+
+/* Estilos siguiente  */
