--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ body{
   width: 100%;
 }
 
-.thumbnail .caption {
+.thumbnail .caption .img-result .info-results {
     padding: 10%;
     font-size: 20px;
     font-weight: 700;
